--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,14 @@ cmake_minimum_required(VERSION 3.12)
 project(LeetCode-ACM)
 
 # 设置C++标准
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # 启用测试
 enable_testing()
+
+# 二进制输出目录（所有题号可执行文件和测试可执行文件都放这里）
+set(BIN_DIR ${CMAKE_BINARY_DIR}/bin)
 
 # 找到所有以数字命名的题号目录
 file(GLOB PROBLEM_DIRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "[0-9]*")
@@ -20,30 +23,32 @@ foreach(PROBLEM_DIR ${PROBLEM_DIRS})
         # 添加可执行文件（问题的代码）
         add_executable(${PROBLEM_DIR} ${PROBLEM_PATH}/main.cpp)
         
-        # 设置该目标的输出目录为题号文件夹
+        # 设置该目标的输出目录为统一的 build/bin
         set_target_properties(${PROBLEM_DIR} PROPERTIES
-            RUNTIME_OUTPUT_DIRECTORY ${PROBLEM_PATH}
+            RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR}
         )
         
         # 为每个问题创建测试executable（而非自定义目标）
         if(EXISTS "${PROBLEM_PATH}/input.txt" AND EXISTS "${PROBLEM_PATH}/output.txt")
             add_executable(test_${PROBLEM_DIR} test.cpp)
             
-            # 通过编译定义传递问题号和项目源目录
+            # 通过编译定义传递问题号、项目源目录和二进制目录
             target_compile_definitions(test_${PROBLEM_DIR} PRIVATE 
                 "PROBLEM_NUMBER=\"${PROBLEM_DIR}\""
                 "PROJECT_SOURCE_DIR=\"${CMAKE_CURRENT_SOURCE_DIR}\""
+                "PROJECT_BINARY_DIR=\"${CMAKE_BINARY_DIR}\""
+                "BIN_DIR=\"${BIN_DIR}\""
             )
             
-            # 测试程序输出到build/bin目录
+            # 测试程序输出到 build/bin 目录
             set_target_properties(test_${PROBLEM_DIR} PROPERTIES
-                RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+                RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR}
             )
             
             # 设置测试程序依赖问题程序
             add_dependencies(test_${PROBLEM_DIR} ${PROBLEM_DIR})
             
-            # 注册为可运行的测试
+            # 注册为可运行的测试（测试可在运行时使用传入的 BIN_DIR 来定位题号可执行文件）
             add_test(
                 NAME test_${PROBLEM_DIR}
                 COMMAND test_${PROBLEM_DIR}
@@ -52,4 +57,3 @@ foreach(PROBLEM_DIR ${PROBLEM_DIRS})
         endif()
     endif()
 endforeach()
-
